--- a/scss/components/banner/banner.scss
+++ b/scss/components/banner/banner.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center center;
+  position: relative;
 
   h1{
     color: $white-color;
