--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -2,6 +2,7 @@ $main-font: 'Montserrat', sans-serif;
 
 $font-sm: 16px;
 $font-md: 19px;
+$font-lg: 24px;
 $font-xxl:38px;
 
 $font-regular: 400;
@@ -25,6 +26,10 @@ $grey-bg: #F5F5FA;
 $grey-bg-alt: #EDEDF7;
 $grey-bg-text: #B3B3BA;
 $grey-bg-separator: #E6E6F0;
+
+$gradient-shadow-height: 10px;
+$default-br: 12px;
+
 
 $main-gradient: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
 
