--- a/scss/components/banner/banner.scss
+++ b/scss/components/banner/banner.scss
@@ -1,4 +1,5 @@
 .banner{
+  //height: calc(100vh - #{$gradient-shadow-height * 2});
   height: 100vh;
   display: flex;
   align-items: center;
@@ -19,5 +20,6 @@
     bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 0;
   }
 }
