--- a/scss/components/header/header-media.scss
+++ b/scss/components/header/header-media.scss
@@ -50,6 +50,43 @@
         display: none;
       }
     }
+
+    .navbar-toggler {
+      --bs-border-width: 0;
+      padding: 7px;
+      &:hover{
+        background-color: $white-color-20;
+        transition: .3s;
+      }
+      &:focus {
+        box-shadow: none;
+      }
+      svg{
+        fill: $white-color;
+      }
+    }
+    .navbar-collapse{
+      background-color: $white-color;
+      padding: 12px;
+      border-radius: $default-br;
+      margin-top: 20px;
+      .nav-link{
+        border-radius: $default-br;
+        padding: 7px 0;
+        text-align: center;
+        background-color: $grey-bg;
+        color: $active-regular;
+        font-size: $font-lg;
+        &.active{
+          border: none;
+          color: $accent-color;
+        }
+        &:active, &:hover, &:focus{
+          background-color: $grey-bg-separator;
+          transition: .3s;
+        }
+      }
+    }
   }
   
   
