--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -2,4 +2,5 @@
 @import "components/header";
 //@import "components/demo-homepage";
 @import "components/banner";
+@import "components/menu-scroll";
 @import "components/footer";
