--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -3,14 +3,16 @@ $main-font: 'Montserrat', sans-serif;
 $font-sm: 16px;
 $font-md: 19px;
 $font-lg: 24px;
-$font-xxl:38px;
+$font-xl: 30px;
+$font-xxl: 34px;
+$font-big:38px;
 
 $font-regular: 400;
 $font-bold: 700;
 
 $white-color: #fff;
 $white-color-20: rgba(255, 255, 255, 0.2);
-
+$white-color-30: rgba(255, 255, 255, 0.3);
 
 $main-color: #323264;
 $main-color-alt: #46466E;
@@ -32,6 +34,8 @@ $default-br: 12px;
 
 
 $main-gradient: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+$red-text-gradient: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+
 
 .nav-link{
   --bs-nav-link-color: #{$white-color};
@@ -43,4 +47,22 @@ $main-gradient: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E
 .bg-gradient{
   --bs-gradient: #{$main-gradient};
 }
+
+
+.list-group{
+  --bs-list-group-color: #{$white-color-30};
+  --bs-list-group-bg: transparent;
+  --bs-list-group-border-color: none;
+  --bs-list-group-active-bg: none;
+  --bs-list-group-active-border-color: none;
+  --bs-list-group-border-width: none;
+  --bs-list-group-action-hover-color: #{$accent-color};
+  --bs-list-group-action-hover-bg: none;
+  --bs-list-group-action-active-color: white;
+  --bs-list-group-action-active-bg: #{$white-color-20};
+  --bs-list-group-disabled-color: none;
+  --bs-list-group-disabled-bg: none;
+}
+
+
 
