--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -3,4 +3,7 @@
 //@import "components/demo-homepage";
 @import "components/banner";
 @import "components/menu-scroll";
+@import "components/our-services";
+
+
 @import "components/footer";
