--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -1,11 +1,12 @@
 $main-font: 'Montserrat', sans-serif;
-
+$font-s: 14px;
 $font-sm: 16px;
 $font-md: 19px;
+$font-most-md: 22px;
 $font-lg: 24px;
 $font-xl: 30px;
 $font-xxl: 34px;
-$font-big:38px;
+$font-big: 38px;
 
 $font-regular: 400;
 $font-bold: 700;
@@ -32,24 +33,22 @@ $grey-bg-separator: #E6E6F0;
 $gradient-shadow-height: 10px;
 $default-br: 12px;
 
-
 $main-gradient: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
 $red-text-gradient: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
 
-
-.nav-link{
+.nav-link {
   --bs-nav-link-color: #{$white-color};
   --bs-navbar-active-color: #{$accent-color};
   --bs-navbar-nav-link-padding-x: 0;
   --bs-navbar-nav-link-padding-y: 0;
   --bs-nav-link-hover-color: #{$accent-color};
 }
-.bg-gradient{
+
+.bg-gradient {
   --bs-gradient: #{$main-gradient};
 }
 
-
-.list-group{
+.list-group {
   --bs-list-group-color: #{$white-color-30};
   --bs-list-group-bg: transparent;
   --bs-list-group-border-color: none;
