--- a/css/homepage.css
+++ b/css/homepage.css
@@ -300,7 +300,7 @@ a {
 }
 .menu-scroll .tab-pane > h4 {
   font-weight: 700;
-  font-size: 30px;
+  font-size: 38px;
   margin: 6% 0 30px;
 }
 .menu-scroll .tab-pane p {
@@ -370,7 +370,6 @@ a {
   font-size: 14px;
   font-weight: 700;
   color: #0085FF;
-  padding-bottom: 10px;
 }
 .our-service__description a:hover, .our-service__description a:focus-visible {
   color: #F0145A;
@@ -384,6 +383,9 @@ a {
   stroke: #F0145A;
   transition: 0.5s;
   transform: translate(20%);
+}
+.our-service__description a {
+  padding-bottom: 10px;
 }
 .our-service__description h3 {
   font-weight: 700;
@@ -424,6 +426,66 @@ a {
   .our-service__description h3 {
     font-size: 30px;
   }
+}
+
+.carousel-team {
+  padding-top: 60px;
+}
+.carousel-team .carousel-inner {
+  background-color: #F5F5FA;
+  border-radius: 12px;
+}
+.carousel-team__caption {
+  z-index: 1;
+  padding-top: 30px;
+}
+.carousel-team__caption a {
+  display: block;
+  text-decoration: none;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+  color: #0085FF;
+}
+.carousel-team__caption a:hover, .carousel-team__caption a:focus-visible {
+  color: #F0145A;
+  transition: 0.5s;
+  transform: scaleX(1.02) translate(30px);
+}
+.carousel-team__caption a svg {
+  width: 20px;
+}
+.carousel-team__caption a:hover path, .carousel-team__caption a:hover svg, .carousel-team__caption a:focus-visible path, .carousel-team__caption a:focus-visible svg {
+  stroke: #F0145A;
+  transition: 0.5s;
+  transform: translate(20%);
+}
+.carousel-team__caption a {
+  padding-bottom: 5px;
+}
+.carousel-team__caption-description {
+  font-weight: 700;
+  font-size: 34px;
+  background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.carousel-team__caption-name {
+  font-weight: 700;
+  font-size: 16px;
+  color: #B3B3BA;
+}
+.carousel-team__caption-post {
+  font-size: 14px;
+}
+.carousel-team .carousel-item {
+  opacity: 0;
+  display: flex;
+}
+.carousel-team .carousel-item.active {
+  transition: 0.5s;
+  opacity: 1;
 }
 
 /*# sourceMappingURL=homepage.css.map */
