--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -4,6 +4,6 @@
 @import "components/banner";
 @import "components/menu-scroll";
 @import "components/our-services";
-
+@import "components/carousel-team";
 
 @import "components/footer";
