--- a/css/homepage.css
+++ b/css/homepage.css
@@ -374,7 +374,7 @@ a {
 .our-service__description a:hover, .our-service__description a:focus-visible {
   color: #F0145A;
   transition: 0.5s;
-  transform: scaleX(1.02) translate(30px);
+  transform: scaleX(1.02) translate(15px);
 }
 .our-service__description a svg {
   width: 20px;
@@ -431,13 +431,23 @@ a {
 .carousel-team {
   padding-top: 60px;
 }
+.carousel-team .carousel-indicators {
+  bottom: -80px;
+  z-index: 1;
+}
+.carousel-team .carousel-indicators [data-bs-target] {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #24A3FF;
+}
 .carousel-team .carousel-inner {
   background-color: #F5F5FA;
   border-radius: 12px;
 }
 .carousel-team__caption {
   z-index: 1;
-  padding-top: 30px;
+  margin-top: 30px;
 }
 .carousel-team__caption a {
   display: block;
@@ -451,7 +461,7 @@ a {
 .carousel-team__caption a:hover, .carousel-team__caption a:focus-visible {
   color: #F0145A;
   transition: 0.5s;
-  transform: scaleX(1.02) translate(30px);
+  transform: scaleX(1.02) translate(15px);
 }
 .carousel-team__caption a svg {
   width: 20px;
@@ -470,6 +480,7 @@ a {
   background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-bottom: 30px;
 }
 .carousel-team__caption-name {
   font-weight: 700;
