--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -1,3 +1,7 @@
+//html{
+  //scroll-behavior: smooth;
+// плавная прокрутка без джаваскрипта
+//}
 body {
   font-family: $main-font;
   font-size: $font-md;
