--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -6,17 +6,16 @@ body {
   font-family: $main-font;
   font-size: $font-md;
   font-weight: $font-regular
-
 }
 
 .bg-gradient {
   position: relative;
-  border-radius: 0 0 $default-br $default-br;
+  border-radius: 0 0 $default-border-radius $default-border-radius;
 
   &:before, &:after {
     content: "";
     display: block;
-    border-radius: 0 0 $default-br $default-br;
+    border-radius: 0 0 $default-border-radius $default-border-radius;
     position: absolute;
     height: $gradient-shadow-height;
     left: 50%;
