--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -31,7 +31,10 @@ $grey-bg-text: #B3B3BA;
 $grey-bg-separator: #E6E6F0;
 
 $gradient-shadow-height: 10px;
-$default-br: 12px;
+
+$default-border-radius: 12px;
+$border-radius-50: 50%;
+
 
 
 $main-gradient: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
