--- a/scss/components/carousel-team/carousel-team.scss
+++ b/scss/components/carousel-team/carousel-team.scss
@@ -8,7 +8,7 @@
     & [data-bs-target]{
       width: 16px;
       height: 16px;
-      border-radius: 50%;
+      border-radius: $border-radius-50;
       background-color: $active-regular;
     }
   }
@@ -29,26 +29,25 @@
 
     z-index: 1;
     padding: 30px;
-    @include section-link;
+    @extend %section-link;
 
     a {
       padding-bottom: 5px;
     }
 
     &-description {
-      font-weight: $font-bold;
-      font-size: $font-xxl;
-      @include red-gradient;
+      @extend %font-xxl;
+      @extend %red-gradient;
       margin-bottom: 30px;
     }
 
     &-name {
-      font-weight: $font-bold;
-      font-size: $font-sm;
+     @extend %font-sm;
       color: $grey-bg-text;
     }
 
     &-post {
+      color: $grey-bg-text;
       font-size: $font-s;
     }
   }
