--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -29,7 +29,7 @@
           width: 7px;
           height: 7px;
           background: white;
-          border-radius: 50%;
+          border-radius: $border-radius-50;
           margin: 0 6px 2px 3px;
         }
       }
