--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -5,5 +5,7 @@
 @import "components/menu-scroll";
 @import "components/our-services";
 @import "components/carousel-team";
+@import "components/company";
+
 
 @import "components/footer";
