--- a/css/homepage.css
+++ b/css/homepage.css
@@ -39,7 +39,7 @@
   --bs-list-group-disabled-bg: none;
 }
 
-.carousel-team__caption-description, .our-service__description h3, .menu-scroll .list-group .active {
+.articles__heading-title, .carousel-team__caption-description, .our-service__description h3, .menu-scroll .list-group .active {
   background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -50,7 +50,7 @@
   font-size: 14px;
 }
 
-.carousel-team__caption-name {
+.articles__wrapper-card-wrap-title, .carousel-team__caption-name {
   font-weight: 700;
   font-size: 16px;
 }
@@ -65,12 +65,12 @@
   font-size: 34px;
 }
 
-.our-service__description h3, .menu-scroll .list-group {
+.articles__heading-title, .our-service__description h3, .menu-scroll .list-group {
   font-weight: 700;
   font-size: 38px;
 }
 
-.carousel-team__caption a, .our-service__description a {
+.articles__heading a, .carousel-team__caption a, .our-service__description a {
   display: block;
   text-decoration: none;
   letter-spacing: 1px;
@@ -79,15 +79,15 @@
   font-weight: 700;
   color: #0085FF;
 }
-.carousel-team__caption a:hover, .our-service__description a:hover, .carousel-team__caption a:focus-visible, .our-service__description a:focus-visible {
+.articles__heading a:hover, .carousel-team__caption a:hover, .our-service__description a:hover, .articles__heading a:focus-visible, .carousel-team__caption a:focus-visible, .our-service__description a:focus-visible {
   color: #F0145A;
   transition: 0.5s;
   transform: scaleX(1.02) translate(15px);
 }
-.carousel-team__caption a svg, .our-service__description a svg {
+.articles__heading a svg, .carousel-team__caption a svg, .our-service__description a svg {
   width: 20px;
 }
-.carousel-team__caption a:hover path, .our-service__description a:hover path, .carousel-team__caption a:hover svg, .our-service__description a:hover svg, .carousel-team__caption a:focus-visible path, .our-service__description a:focus-visible path, .carousel-team__caption a:focus-visible svg, .our-service__description a:focus-visible svg {
+.articles__heading a:hover path, .carousel-team__caption a:hover path, .our-service__description a:hover path, .articles__heading a:hover svg, .carousel-team__caption a:hover svg, .our-service__description a:hover svg, .articles__heading a:focus-visible path, .carousel-team__caption a:focus-visible path, .our-service__description a:focus-visible path, .articles__heading a:focus-visible svg, .carousel-team__caption a:focus-visible svg, .our-service__description a:focus-visible svg {
   stroke: #F0145A;
   transition: 0.5s;
   transform: translate(20%);
@@ -97,6 +97,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -544,7 +548,7 @@ a {
   margin-bottom: 30px;
 }
 .company .row a:hover {
-  border: 1px solid #fff;
+  border: 1px solid #000;
   border-radius: 10px;
   animation: shake-logo 0.3s linear;
 }
@@ -638,6 +642,77 @@ a {
 }
 @media (max-width: 991px) and (min-width: 576px) {
   .company img {
+    width: 100%;
+  }
+}
+
+.articles {
+  padding-top: 30px;
+  background-color: #F5F5FA;
+}
+.articles__heading-link {
+  margin-bottom: 10px;
+}
+.articles__heading-title {
+  margin-bottom: 30px;
+}
+.articles__wrapper {
+  gap: 30px;
+}
+.articles__wrapper-card {
+  background: #fff;
+  border-radius: 8px;
+  overflow: hidden;
+  width: 33.3333333333%;
+}
+.articles__wrapper-card img {
+  height: 200px;
+  width: 100%;
+}
+.articles__wrapper-card-wrap {
+  margin: 30px;
+}
+.articles__wrapper-card-wrap-title {
+  color: #24A3FF;
+}
+.articles__wrapper-card-wrap-data {
+  font-weight: 700;
+  font-size: 12px;
+  color: #B3B3BA;
+  letter-spacing: 1px;
+}
+.articles__wrapper-card-wrap-line {
+  margin: 15px 0;
+  border: 2px solid;
+  color: #E6E6F0;
+  opacity: 1;
+}
+.articles__wrapper-card-wrap-text {
+  font-size: 14px;
+}
+
+@media (max-width: 767px) and (min-width: 576px) {
+  .articles .container {
+    max-width: 576px;
+  }
+  .articles__wrapper {
+    flex-wrap: wrap;
+  }
+  .articles__wrapper-card {
+    width: calc(50% - 15px);
+  }
+  .articles__wrapper-card:last-child {
+    width: 100%;
+  }
+}
+@media (max-width: 576px) {
+  .articles .container {
+    max-width: 320px;
+  }
+  .articles__wrapper {
+    flex-wrap: wrap;
+  }
+  .articles__wrapper-card {
     width: 100%;
   }
 }
