--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -6,6 +6,6 @@
 @import "components/our-services";
 @import "components/carousel-team";
 @import "components/company";
-
+@import "components/articles";
 
 @import "components/footer";
